ges: Ref the GES class to avoid later deadlock

This ensure that that all class are initialized from the main thread,
avoid class initialization in random thread, which may cause deadlocks.

https://bugzilla.gnome.org/show_bug.cgi?id=784769